--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "typescript": "^5.3.3"
   },
   "dependencies": {
+    "@types/node": "^20.11.5",
     "dotenv": "^16.3.2",
     "ethers": "^6.10.0"
   }
