--- a/package.json
+++ b/package.json
@@ -5,17 +5,19 @@
   "type": "module",
   "license": "MIT",
   "devDependencies": {
-    "ts-node": "^10.9.2",
-    "typescript": "^5.3.3",
     "eslint": "^8.56.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.2",
     "lint-staged": "^15.2.0",
-    "prettier": "^3.1.1"
+    "nodemon": "^3.0.3",
+    "prettier": "^3.1.1",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.3.3"
   },
   "dependencies": {
     "@types/node": "^20.11.5",
     "dotenv": "^16.3.2",
-    "ethers": "^6.10.0"
+    "ethers": "^6.10.0",
+    "redis": "^4.6.12"
   }
 }
