--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/node": "^20.11.5",
     "dotenv": "^16.3.2",
     "ethers": "^6.10.0",
+    "ioredis": "^5.3.2",
     "redis": "^4.6.12"
   }
 }
