--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "typescript": "^5.3.3"
   },
   "dependencies": {
+    "@sinclair/typebox": "^0.32.13",
     "@types/node": "^20.11.5",
     "dotenv": "^16.3.2",
     "ethers": "^6.10.0",
+    "fastify": "^4.26.0",
     "ioredis": "^5.3.2",
     "redis": "^4.6.12"
   }
