--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
-    "target": "es5",
-    "lib": ["es6", "dom", "dom.iterable", "esnext"],
+    "target": "ES6",
+    "lib": ["es6", "esnext"],
     "allowJs": true,
     "skipLibCheck": true,
     "esModuleInterop": true,
@@ -16,6 +16,8 @@
     "noEmit": true,
     "baseUrl": ".",
     "allowImportingTsExtensions": true,
+    "rootDir": "./src",
+    "outDir": "./dist",
   },
   "include": ["src", "src/*.ts", "src/**/*.ts"],
   "paths": {
